// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/type/date.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// A manifestation of an ExchangeWorkflow.Step for a particular Exchange.
message ExchangeStep {
  // Internal identifier of the parent `RecurringExchange`.
  fixed64 external_recurring_exchange_id = 1;

  // The date that the `Exchange` is supposed to occur. There can be at most one
  // `Exchange` for a `RecurringExchange` on any given date -- this is a part of
  // the `Exchange`'s primary key.
  google.type.Date date = 2;

  // Which step this is (indexing into the `RecurringExchange`'s
  // `ExchangeWorkflow`).
  int32 step_index = 3;

  // State of the ExchangeStep.
  enum State {
    STATE_UNSPECIFIED = 0;

    // Some predecessor ExchangeStep is not in state SUCCEEDED.
    BLOCKED = 1;

    // All predecessor ExchangeSteps are in state `SUCCEEDED` and all associated
    // ExchangeStepAttempts, if there are any, are in a `TEMPORARILY_FAILED`
    // state.
    READY = 2;

    // All predecessor ExchangeSteps are in state `SUCCEEDED` and an associated
    // ExchangeStepAttempt is in state `ACTIVE`.
    IN_PROGRESS = 3;

    // The step has succeeded. Terminal state. This implies that an associated
    // ExchangeStepAttempt is in state `SUCCEEDED`.
    SUCCEEDED = 4;

    // The step has permanently failed. Terminal state. This implies that an
    // associated ExchangeStepAttempt is in state `PERMANENTLY_FAILED`.
    FAILED = 5;
  }
  State state = 4;

  // Denormalized party that executes this ExchangeStep.
  oneof party {
    fixed64 external_data_provider_id = 5;
    fixed64 external_model_provider_id = 6;
  }
}
